--- a/IPB/Info.plist
+++ b/IPB/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>5</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -43,6 +43,8 @@
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Acceso a libreria</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Acceso a camara</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Roboto-Black.ttf</string>
